# iSpim-control

./: README.md  pyproject.toml  setup.py
dispim/: compute_waveforms.py  config_base.py  config_template.py  dispim.py  dispim_config.py  oxxius_test.py
dispim/devices/: config.py  dcam.py  dcam_process.py  dcamapi4.py  frame_grabber.py  laser.py  ni.py  ni_test.py  oxxius_components.py  tiger_components.py
docs/: dispim setup.docx  pyproject.toml
examples/: config-2.toml  config.toml  create_config.py  main.py  plot_waveforms.py  sim_config.toml
examples/test-ID_2022_09_26/: sim_config.toml
ispim/: compute_waveforms.py  config_template.py  ispim.py  ispim_config.py
ispim/devices/: camera.py  dispim_main.bat  frame_grabber.py  laser.py  laser_linear_projections.txt  ni.py  oxxius_components.py
ispim/devices/camera_drivers/: acquire_driver.py
ispim/devices/laser_drivers/: oxxius_driver.py
ispim/operations/: normalized_dct_shannon_entropy.py
mesospim/: compute_waveforms.py  config_base.py  mesospim.py  mesospim_config.py  spim_base.py  tiff_transfer.py
mesospim/devices/: ni.py  tiger_components.py  vortran.py
