[project]
name = "ispim"
description = "abstraction of the ispim instrument."
version = "0.1.0"
authors = [
    {name = "Adam Glaser", email = "adam.glaser@alleninstitute.org"},
    {name = "Joshua Vasquez", email = "joshua.vasquez@alleninstitute.org"},
    {name = "Micah Woodard", email = "micah.woodard@alleninstitute.org"}
]
readme = "README.md"
keywords = ['microcsope', 'spim']
classifiers=[
    'License :: OSI Approved :: MIT License',
    'Development Status :: 4 - Beta',
    'Programming Language :: Python'
]
packages = [
    { include = "ispim"},
]
#requires-python = ">=3.8,<3.11"
dependencies = [
    "tigerasi @ git+ssh://git@github.com/AllenNeuralDynamics/TigerASI.git@main#egg=TigerASI",
    "spim_core @ git+ssh://git@github.com/AllenNeuralDynamics/spim-core.git@main#egg=spim_core",
    "scipy >= 1.8.1",
    "numpy >= 1.22.3",
    "matplotlib >= 3.5.2",
    "tomlkit >= 0.11.1",
    "mock >= 4.0.3",
    "tifffile >= 2022.8.12",
    "coloredlogs >= 15.0.1",
    "nidaqmx >= 0.6.2",
    "gitPython >= 3.1.27"
]

[project.urls]
source = "https://github.com/AllenNeuralDynamics/ispim-control"

[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"


[project.scripts]
ispim = "bin.main:main"
